# repo-management

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README_deployment.md  clean_cache.py  config.py  deploy.sh  file_monitor.py  file_states.json  git_manager.py  github_detector.py  github_repos.json  index_updater.py  main.py  pyproject.toml  repo_cache.json  repo_creator.py  requirements.txt  setup.py  test_readme_monitor.py
Crawler/: README.md
Default/: README.md
Script/: README.md  test-project.md
Trading/: README.md  crypto-analyzer.md
repo-index/Crawler/: README.md
repo-index/Default/: README.md
repo-index/Script/: README.md
repo-index/Trading/: README.md
repo_index/Default/: README.md
repo_index/Script/: README.md
repo_index/Trading/: README.md
repo_manager/: __init__.py  cli.py  config.py  core.py  database.py  templates.py
scripts/: install.sh
scripts/macos/launchd/: com.yourorg.repo-manager.plist.template
src/repo_manager/: __init__.py  cli.py  main.py
src/repo_manager/core/: __init__.py  file_monitor.py  git_manager.py  github_detector.py  index_updater.py  manager.py
src/repo_manager/plugins/: __init__.py
src/repo_manager/services/: __init__.py  config.py  database.py
src/repo_manager/utils/: __init__.py  templates.py
