[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-manager"
version = "1.0.0"
authors = [
    {name = "APE-147", email = "your-email@example.com"},
]
description = "Automated GitHub repository management system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["github", "automation", "repository", "management", "cli"]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.812",
]

[project.scripts]
repo-manager = "repo_manager.cli:app"

[project.urls]
Homepage = "https://github.com/APE-147/github-repo-manager"
"Bug Reports" = "https://github.com/APE-147/github-repo-manager/issues"
Source = "https://github.com/APE-147/github-repo-manager"
Documentation = "https://github.com/APE-147/github-repo-manager/wiki"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repo_manager = [
    "templates/*.plist",
    "templates/*.md",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true